# anyrun-sdk

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: commit-action.yml  legacy-commit-action.yml  release-action.yml
anyrun/: version.py
anyrun/connectors/: base_connector.py  generic_environment.py
anyrun/connectors/sandbox/: base_connector.py  sandbox_connectors_fabric.py
anyrun/connectors/threat_intelligence/: feeds_connector.py  lookup_connector.py  yara_lookup_connector.py
anyrun/models/: lookup_summary.py
anyrun/utils/: config.py  utility_functions.py
examples/: exceptions_management.py  generic_environment.py  get_feeds.py  get_feeds_async.py  iterate_feeds.py  iterate_feeds_async.py
examples/sandbox/: add_time_to_task.py  analysis_utils.py  get_meta_information.py  get_reports.py  perform_file_analysis_async.py  perform_url_analysis.py  suspicious_file.txt
examples/threat_intelligence/feeds/: get_feeds.py  get_feeds_async.py  iterate_feeds.py  iterate_feeds_async.py
examples/threat_intelligence/lookup/: get_intelligence.py  get_intelligence_async.py  parse_lookup_summary.py
examples/threat_intelligence/taxii_stix/: get_delta.py  get_feeds.py  iterate_feeds.py
examples/threat_intelligence/yara_lookup/: get_yara.py  get_yara_async.py  iterate_yara.py  iterate_yara_async.py  perform_simplified_yara_search.py  perform_yara_search.py  perform_yara_search_async.py  yara_lookup_rule_sample.txt
tests/: conftest.py
tests/unit_tests/: test_exceptions.py  test_exceptions_module.py  test_utility_functions.py
tests/unit_tests/core/: test_base_connector.py  test_generic_environment.py
tests/unit_tests/iterators/: test_base_iterator.py  test_feeds_iterators_fabric.py  test_taxii_stix_iterator.py  test_yara_lookup_iterators_fabric.py
(+13 files in other folders)
