[project]
name = 'anyrun-sdk'
version = '1.14.12'

description = 'This is the official Python client library for ANY.RUN. Automate management of ANY.RUN REST endpoints'
authors = [
    {name = 'Semen Shalnev', email = 'support@any.run'}
]
license = {text = 'Apache v2.0'}
readme = 'README.md'
classifiers = [
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries',
    'Typing :: Typed'
]
requires-python = '>=3.9'
dependencies = [
    'aiohttp>=3.12.14',
    'aiofiles>=24.1.0',
    'typing-extensions>=4.12.2',
    'requests>=2.32.4',
    'pydantic>=2.12.5'
]

[project.optional-dependencies]
dev = [
    # Testing framework.
    'pytest==8.3.4',
    'pytest-asyncio==0.25.3',
    'pytest-cov==6.0.0'
]

[project.urls]
'Homepage' = 'https://github.com/anyrun/anyrun-sdk'
'Examples' = 'https://github.com/anyrun/anyrun-sdk/tree/main/examples'

[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ["anyrun*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["anyrun"]
omit = [
    "anyrun/connectors/sandbox/operation_systems/android.py",
    "anyrun/connectors/sandbox/operation_systems/linux.py",
    "anyrun/connectors/sandbox/operation_systems/macos.py",
    "anyrun/connectors/sandbox/operation_systems/windows.py",
    "anyrun/utils/config.py",
    "anyrun/version.py"
]

[tool.coverage.report]
fail_under = 90
exclude_lines = ["pragma: no cover"]